; ModuleID = '/home/carl/AnghaBench/micropython/ports/stm32/usbhost/Core/Src/extr_usbh_core.c_USBH_RegisterClass.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/stm32/usbhost/Core/Src/extr_usbh_core.c_USBH_RegisterClass.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32** }

@USBH_OK = common dso_local global i32 0, align 4
@USBH_MAX_NUM_SUPPORTED_CLASS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [25 x i8] c"Max Class Number reached\00", align 1
@USBH_FAIL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"Invalid Class handle\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @USBH_RegisterClass(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* @USBH_OK, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %30

9:                                                ; preds = %2
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @USBH_MAX_NUM_SUPPORTED_CLASS, align 8
  %14 = icmp slt i64 %12, %13
  br i1 %14, label %15, label %26

15:                                               ; preds = %9
  %16 = load i32*, i32** %4, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load i32**, i32*** %18, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = add nsw i64 %22, 1
  store i64 %23, i64* %21, align 8
  %24 = getelementptr inbounds i32*, i32** %19, i64 %22
  store i32* %16, i32** %24, align 8
  %25 = load i32, i32* @USBH_OK, align 4
  store i32 %25, i32* %5, align 4
  br label %29

26:                                               ; preds = %9
  %27 = call i32 @USBH_ErrLog(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %28 = load i32, i32* @USBH_FAIL, align 4
  store i32 %28, i32* %5, align 4
  br label %29

29:                                               ; preds = %26, %15
  br label %33

30:                                               ; preds = %2
  %31 = call i32 @USBH_ErrLog(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %32 = load i32, i32* @USBH_FAIL, align 4
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %30, %29
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @USBH_ErrLog(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
